--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html !DOCTYPE>
   <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div id="content"></div>
