proper placement of script tags

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>My title</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <div id="content"></div>
+    <script src="lib/d3.v2.js"></script>
+    <script src="lib/jquery.min.js"></script>
   </body>
-  <script src="lib/d3.v2.js"></script>
-  <script src="lib/jquery.min.js"></script>
 </html>
